# sentinel

./: .env.example  .gitignore  LICENSE  README.md  pyproject.toml  requirements-dev.txt  requirements.txt
.claude/: settings.json  settings.local.json
.github/workflows/: ci.yml
_bmad/: config.toml  config.user.toml
_bmad-output/brainstorming/: brainstorming-session-2026-05-09-0000.md
_bmad-output/implementation-artifacts/: 1-1-package-scaffold-and-ci-pipeline.md  1-2-shared-type-definitions.md  1-3-config-module-and-test-infrastructure.md  2-1-source-registry.md  2-2-confidence-engine.md  3-1-watchman-agent.md  3-2-cipher-agent.md  4-1-verdict-assembly-and-json-output.md  4-2-cli-orchestrator.md  4-3-documentation-and-open-source-hygiene.md  4-4-end-to-end-integration-test.md  sprint-status.yaml
_bmad-output/planning-artifacts/: architecture.md  epics.md  implementation-readiness-report-2026-05-10.md  prd.md
_bmad/_config/: files-manifest.csv  manifest.yaml
_bmad/bmb/: config.yaml
_bmad/bmm/: config.yaml
_bmad/core/: config.yaml
_bmad/cyber-ops/: config.yaml
eval/: labeled_set.json  results.json  run_eval.py
fixtures/: google-benign.json  lsass-credential-dumping.json  ssh-brute-force.json  tor-exit-node.json  urlhaus-malware-ip.json
src/sentinel/: cipher.py  confidence.py  config.py  main.py  reporter.py  source_registry.py  (+2 more)
static/: app.js  index.html  style.css
tests/: conftest.py  test_cipher.py  test_confidence.py  test_config.py  test_main.py  test_reporter.py  test_source_registry.py  test_verdict.py  test_version.py  test_watchman.py
(+11 files in other folders)
