[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "sentinel"
version = "0.1.0"
requires-python = ">=3.10"
dependencies = [
    "anthropic==0.100.0",
    "httpx==0.28.1",
    "python-dotenv==1.2.2",
]

[project.optional-dependencies]
dev = [
    "pytest==9.0.3",
    "pytest-mock==3.15.1",
    "ruff==0.15.12",
    "mypy==2.0.0",
]

[project.scripts]
sentinel = "sentinel.main:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.mypy]
python_version = "3.10"
strict = true
mypy_path = "src"

[[tool.mypy.overrides]]
module = "dotenv"
ignore_missing_imports = true

[tool.ruff]
src = ["src"]
line-length = 88

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]
